# yet-another-fastapi-RW-example

./: .dockerignore  .drone.yml  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml  setup.cfg  upgrade_pkgs.sh
.docker/: Dockerfile.drone-check  Dockerfile.main
.docker/postgres/: init.sql
.github/workflows/: lint.yml  test-and-coding_style.yml  tests.yml
app/: helpers.py  main.py
app/api/: common_schema.py  paginator.py  router.py  shared_schema.py
app/api/contexts/async_example/: router.py
app/api/contexts/async_example/domain/: __init__.py  schema.py
app/api/contexts/async_example/gateway/: __init__.py  repository.py
app/api/contexts/async_example/usecase/: __init__.py  add_example.py  delete_example.py  get_example.py  get_examples.py  get_paginate_examples.py  update_example.py
app/api/contexts/example/: router.py
app/api/contexts/example/domain/: __init__.py  schema.py
app/api/contexts/example/gateway/: __init__.py  presenter.py  repository.py
app/api/contexts/example/usecase/: __init__.py  add_example.py  delete_example.py  get_example.py  get_examples.py  get_paginate_examples.py  update_example.py
app/api/dependencies/: http_activity.py
app/core/: __init__.py  config.py  logging.py
app/core/filesystem/: file_util.py  storage_facade.py
app/core/filesystem/contracts/: file_system_manager.py
app/core/filesystem/providers/: __init__.py  local_provider.py  public_provider.py  s3_provider.py
app/core/logger/: log_facade.py
app/core/logger/providers/: __init__.py  file_provider.py  provider_contract.py  slack_provider.py
app/core/settings/: __init__.py  app.py  base.py  database.py
app/exceptions/: handler.py  schema.py
app/middlewares/: __init__.py  i18n_middleware.py
app/models/: example.py
database/: async_connection.py  connection.py
database/migrations/: env.py  script.py.mako
database/migrations/versions/: ebd82d610bb5_create_example_table.py
tests/: conftest.py  test_async_example_router.py  test_example_router.py
tests/async/: conftest.py  test_async_example_router.py
