[tool.poetry]
name = "cyberbiz-app-store"
version = "0.0.1"
description = "cyberbiz app store source code"
authors = ["whc <whccchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
sqlmodel = "^0.0.8"
alembic = "^1.8.1"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
flake8 = "^6.0.0"
toml = "^0.10.2"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-env = "^0.8.1"
httpx = "^0.23.1"
pytest-asyncio = "^0.20.3"
mypy = "^0.991"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
column_limit = 100
based_on_style = "google"
split_before_logical_operator = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

# pytest setup
[tool.pytest.ini_options]
addopts = """
  -ra
  -q
  --strict-markers
  --asyncio-mode=auto
"""

testpaths = [
  "tests"
]

env = [
  "APP_NAME=test",
  "APP_ENV=test",
  "APP_DEBUG=true",
  "LOG_LEVEL=debug",
  "DB_USER=root",
  "DB_PASSWORD=",
  "DB_HOST=localhost",
  "DB_PORT=5432",
  "DB_NAME=postgres_test"
]

log_format = "%(asctime)s (%(filename)-16s:%(lineno)-3s) %(levelname)-8s %(message)s"
log_date_format = "%Y-%M-%D %H:%M:%S"
