[tool.poetry]
name = "yet-another-fastapi-RW-example"
version = "0.0.1"
description = "Another FastAPI realworld example project"
authors = ["whc <whccchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">0.99"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"
alembic = "^1.8.1"
loguru = "^0.7.0"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
asyncpg = "^0.29.0"
slack-sdk = "^3.21.3"
boto3 = "^1.28.44"
typer = {extras = ["all"], version = "^0.9.0"}
inflect = "^7.0.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
pytest = "^7.2.0"
pytest-env = "^0.8.1"
httpx = "^0.23.1"
mypy = ">0.9"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"
ruff = "^0.0.272"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
column_limit = 88
based_on_style = "google"
split_before_logical_operator = true
split_before_arithmetic_operator = true # flake8 W504

[tool.ruff]
line-length = 88
extend-select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
extend-ignore = [
    "E501",
    "B008",
    "E402",
    "E226",
    "B904",
    "B030",
    "B006"
]
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "__init__.py"
]
[tool.ruff.isort]
force-single-line = false
force-sort-within-sections = true
single-line-exclusions = ["typing"]
order-by-type = false
[tool.ruff.mccabe]
max-complexity = 10
[tool.ruff.flake8-quotes]
inline-quotes = "single"
# pytest setup
[tool.pytest.ini_options]
addopts = """
  -ra
  -q
  --strict-markers
  --asyncio-mode=auto
"""

testpaths = [
    "tests"
]

env = [
    "APP_NAME=test",
    "APP_ENV=test",
    "APP_URL=http://localhost",
    "APP_DEBUG=true",
    "LOG_LEVEL=debug",
    "DB_USER=root",
    "DB_PASSWORD=",
    "DB_HOST=pgsql",
    "DB_PORT=5432",
    "DB_NAME=postgres_test"
]

log_format = "%(asctime)s (%(filename)-16s:%(lineno)-3s) %(levelname)-8s %(message)s"
log_date_format = "%Y-%M-%D %H:%M:%S"

[tool.poetry.scripts]
make-template = "app.bin.make_boilerplate.main:app"
